--- a/contactus.html
+++ b/contactus.html
@@ -70,32 +70,33 @@
     <!-- /Main Container --></div>
 
     <!-- footer -->
-    <footer class="site-footer">
+    <footer class="site-footer mt-1 text-white" style="background-color:#F66B27">
       <div class="container">
         <div class="row">          
-          <div class="col-sm-4 text-center">
-            
-          </div>
-          <div class="col-sm-4 text-center">
-
-          </div>
-          <div class="col-sm-4 text-center">
-              <a role="button" class="btn btn-link" href="tel:+13055551234"><i class="fa fa-phone"></i>
-                1-305-555-1234</a><br />
-              <a role="button" class="btn btn-link" href="mailto:frijolitos_pines@frijolitos.com"><i class="fa fa-envelope-o"></i>
-                frijolitos_pines@frijolitos.com</a>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col text-center">            
-            <a class="btn btn-social-icon btn-instagram" href="http://instagram.com/"><i class="fa fa-instagram"></i></a>
-            <a class="btn btn-social-icon btn-facebook" href="http://facebook.com/"><i class="fa fa-facebook"></i></a>
-            <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
-            <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
+          <div class="col-12  mx-auto text-center py-3">
+            <h4>Contact Us</h4>
+            <a role="button" class="btn btn-link" href="tel:+13055551234"><i class="fa fa-home"></i>
+              1-305-555-1234</a>
+            <a role="button" class="btn btn-link" href="tel:+13055551234"><i class="fa fa-phone"></i>
+              1-305-555-1234</a>
+            <a role="button" class="btn btn-link" href="mailto:frijolitos_pines@frijolitos.com"><i
+                class="fa fa-envelope-o"></i>
+              frijolitos_pines@frijolitos.com</a>
           </div>
         </div>
       </div>
-      <!-- /footer--></footer>    
+      <!-- /footer-->
+    </footer>
+    <div class="container">
+      <div class="row mt-3">
+        <div class="col text-center">
+          <a class="btn btn-social-icon btn-instagram" href="http://instagram.com/"><i class="fa fa-instagram"></i></a>
+          <a class="btn btn-social-icon btn-facebook" href="http://facebook.com/"><i class="fa fa-facebook"></i></a>
+          <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
+          <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
+        </div>
+      </div>
+    </div>
     <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
